fix: change of left block heigth

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alexey Vinidzisiuk CV</title>
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="styles.css">
-    <meta property="image" content="DSC_4195-2.jpg">
+    <link rel="stylesheet" href="./normalize.css">
+    <link rel="stylesheet" href="./styles.css">
+    <meta property="image" content="./assets/jpeg/DSC_4195-2.jpg">
 
 </head>
 <body>
@@ -148,6 +148,7 @@ function greatBelorussianRandom () {
                         <li>CSS3/SCSS</li>
                         <li>Adobe Photoshop</li>
                         <li>JavaScript</li>
+                        <li>Git/GitHub</li>
                     </ul>
                 </div>
 
@@ -155,9 +156,6 @@ function greatBelorussianRandom () {
         </div>
     </main>
 
-    <footer class="footer">
-
-    </footer>
 </div>
 </body>
 </html>
